--- a/src/components/catalog/listCatalog/listCatalog.module.scss
+++ b/src/components/catalog/listCatalog/listCatalog.module.scss
@@ -2,20 +2,22 @@
     width: 100%;
     padding-top: 76px;
     margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .list {
         display: flex;
-        align-self: center;
+        justify-content: flex-start;
         flex-wrap: wrap;
         gap: 13px 19px;
         margin-bottom: 26px;
     }
     .btn {
         border-radius: 4px;
-        /* accent */
         background: rgb(241, 79, 79);
         padding: 25px 47px;
         border: none;
-        margin: 0 auto;
         display: block;
+        color: white;
     }
 }
