--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
 .container {
   max-width: 1280px;
   margin: 0 auto;
+  padding-left: 51px;
+  padding-right: 35px;
 }
 li {
   list-style: none;
