--- a/src/components/aboutUs/aboutUs.module.scss
+++ b/src/components/aboutUs/aboutUs.module.scss
@@ -2,6 +2,7 @@
   background: rgb(72, 66, 131);
   color: white;
     position: relative;
+    margin-bottom: 60PX;
   .body {
     display: flex;
     justify-content: space-between;
