--- a/src/components/productForYou/productForYou.module.scss
+++ b/src/components/productForYou/productForYou.module.scss
@@ -1,48 +1,85 @@
 .productForYou {
-    color: rgb(68, 75, 88);
-    list-style: 150%;
-
-    .body {
-        border-radius: 4px;
-        background: rgb(255, 244, 238);
-        .title {
-            font-size: 30px;
-            font-weight: 700;
-        }
-
-        .subtitle {
-            color: rgb(128, 128, 128);
-
-            font-size: 16px;
-            font-weight: 600;
-        }
-
-        .content {
-            .title {
-                font-size: 24px;
-                font-weight: 600;
-            }
-            .list{
-                display: flex;
-                flex-wrap: wrap;
-                gap:20px 70px  ;
-                  .item{
-                display: flex;
-                flex-direction: column;
-                .img{
-                    width: 280px;
-                    height: 120px;
-
-                }.checkbox{
-                    width: 24px;
-                    height: 24px;
-                }
-                .label{
-                    font-size: 16px;
-                    font-weight: 600;
-                }
-            }
-            }
-        }
+  color: rgb(68, 75, 88);
+  list-style: 150%;
+    margin-bottom: 60px;
+  .body {
+    border-radius: 4px;
+    background: rgb(255, 244, 238);
+    padding: 40px 100px;
+    .title {
+      font-size: 30px;
+      font-weight: 700;
+      margin-bottom: 16px;
     }
+
+    .subtitle {
+      color: rgb(128, 128, 128);
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 3px;
+    }
+    .content {
+      padding-top: 25px;
+        padding-bottom: 40px;
+        border-bottom: 1px solid rgb(128, 128, 128);;
+margin-bottom: 19px;
+        border-top: 1px solid rgb(128, 128, 128);;
+      .title {
+        font-size: 24px;
+        font-weight: 600;
+        margin-bottom: 12px;
+      }
+      .list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px 70px;
+        .item {
+          display: flex;
+          flex-direction: column;
+          .img {
+            width: 280px;
+            height: 120px;
+            margin-bottom: 10px;
+          }
+          span {
+            display: flex;
+            align-items: flex-end;
+            .checkbox {
+              width: 24px;
+              height: 24px;
+              margin-right: 10px;
+            }
+            .label {
+              font-size: 16px;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+    .pagination{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-right: 14px;
+            .step{
+                color: rgb(128, 128, 128);
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 150%;
+                letter-spacing: 0%;
+
+            }
+            .nextStep{
+                padding: 12px 42px;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 150%;
+
+                border: 1px solid rgb(68, 75, 88);
+                border-radius: 4px;
+                background: transparent;
+            }
+    }
+  }
 }
