--- a/src/components/catalog/listCatalog/Product/productcard.module.scss
+++ b/src/components/catalog/listCatalog/Product/productcard.module.scss
@@ -4,7 +4,12 @@
     max-height: 358px;
     height: 100%;
     border-radius: 4px;
-
+        @media (max-width:1260px) {
+                    max-width: 250px;
+                    width: 100%;
+                    max-height: 358px;
+            
+        }
     .img {
         max-width: 280px;
         width: 100%;
@@ -13,6 +18,12 @@
         border-radius: 4px;
         background-color: #e5e5e5;
         margin-bottom: 5px;
+        @media (max-width:1260px) {
+                    max-width: 250px;
+                    width: 100%;
+                    height: 250px;
+            
+        }
     }
     .title {
         font-size: 16px;
