--- a/src/components/hero/header/header.module.scss
+++ b/src/components/hero/header/header.module.scss
@@ -18,16 +18,19 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+           
             .list {
                 gap: 36px;
                 display: flex;
                 align-items: center;
-                font-size: 14px;
+                font-size: clamp(8px,80%, 20px);
                 font-weight: 600;
                 line-height: 160%;
                 letter-spacing: 0%;
-
                 width: 100%;
+                 @media (max-width:1024px) {
+                   justify-content:flex-end;
+                }
                 .item {
                     text-wrap: nowrap;
                 }
@@ -38,6 +41,10 @@
                 justify-content: space-between;
                 max-width: 90px;
                 width: 100%;
+
+                @media (max-width:1024px) {
+                        display: none;
+                }
                 .link {
                     color: white;
                     font-size: 14px;
