--- a/src/components/productForYou/productForYou.module.scss
+++ b/src/components/productForYou/productForYou.module.scss
@@ -22,7 +22,7 @@
       padding-top: 25px;
         padding-bottom: 40px;
         border-bottom: 1px solid rgb(128, 128, 128);;
-margin-bottom: 19px;
+        margin-bottom: 19px;
         border-top: 1px solid rgb(128, 128, 128);;
       .title {
         font-size: 24px;
@@ -33,6 +33,7 @@ margin-bottom: 19px;
         display: flex;
         flex-wrap: wrap;
         gap: 20px 70px;
+            justify-content: space-evenly;
         .item {
           display: flex;
           flex-direction: column;
