--- a/src/components/team/team.module.scss
+++ b/src/components/team/team.module.scss
@@ -23,7 +23,9 @@
         gap: 20px;
         height: 920px;
         justify-content: flex-start;
-
+        @media (max-width:1280px) {
+            height: 740px;
+        }
         &:nth-child(2){
              justify-content: flex-end;
         }
@@ -31,7 +33,6 @@
         .containerImg{
             position: relative;
             color: white;
-            
             &:hover{
                 p{opacity: 1;}
             }
@@ -67,6 +68,9 @@
         }       
         .img{
             max-width: 387px;
+             @media (max-width:1024px) {
+            max-width: 300px;
+        }
             max-height: 400px;
         }
 
