--- a/src/components/catalog/listCatalog/Product/productcard.module.scss
+++ b/src/components/catalog/listCatalog/Product/productcard.module.scss
@@ -8,22 +8,22 @@
                     max-width: 250px;
                     width: 100%;
                     max-height: 358px;
-            
+                    height: 100%;
         }
     .img {
         max-width: 280px;
         width: 100%;
         height: 293px;
-
         border-radius: 4px;
         background-color: #e5e5e5;
         margin-bottom: 5px;
-        @media (max-width:1260px) {
+          @media (max-width:1260px) {
                     max-width: 250px;
                     width: 100%;
-                    height: 250px;
-            
+                    height: 300px;
+                    
         }
+
     }
     .title {
         font-size: 16px;
