--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,4 +1,9 @@
-.header {
+.header {    background-color: #484283;
+  color: white;
+
+}
+a{
+  color: white;
 }
 .body {
   display: flex;
@@ -6,7 +11,7 @@
   justify-content: space-between;
 
   height: 63px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+
 }
 .logo {
   font-size: 30px;
