--- a/src/components/catalog/listCatalog/Product/productcard.module.scss
+++ b/src/components/catalog/listCatalog/Product/productcard.module.scss
@@ -20,12 +20,13 @@
           @media (max-width:1260px) {
                     max-width: 250px;
                     width: 100%;
-                    height: 300px;
-                    
+                    height: 300px;      
         }
-
     }
     .title {
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+        overflow: hidden;
         font-size: 16px;
         font-weight: 600;
         line-height: 23px;
