--- a/src/components/admin/listCatalogAdmin/Product/productcard.module.scss
+++ b/src/components/admin/listCatalogAdmin/Product/productcard.module.scss
@@ -1,7 +1,8 @@
 .product {
-    max-width: 280px;
+    cursor: pointer;
+    max-width: 340px;
     width: 100%;
-    max-height: 358px;
+    max-height: 400px;
     height: 100%;
     border-radius: 4px;
         @media (max-width:1260px) {
@@ -13,7 +14,7 @@
     .img {
         max-width: 380px;
         width: 100%;
-        height: 350px;
+        height: 340px;
         border-radius: 4px;
         background-color: #e5e5e5;
         margin-bottom: 5px;
