--- a/src/components/admin/listCatalogAdmin/listCatalogAdmin.module.scss
+++ b/src/components/admin/listCatalogAdmin/listCatalogAdmin.module.scss
@@ -1,5 +1,6 @@
-.listCatalog {
+.ListCatalogAdmin {
     width: 100%;
+    
     padding-top: 76px;
     margin-left: 20px;
     display: flex;
@@ -7,7 +8,7 @@
     align-items: center;
     .list {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-evenly;
         flex-wrap: wrap;
         gap: 13px 19px;
         margin-bottom: 26px;
