--- a/src/components/AdminProduct/adminProduct.module.scss
+++ b/src/components/AdminProduct/adminProduct.module.scss
@@ -42,3 +42,15 @@
         color: rgb(68, 75, 88)
     }
 }
+.titleProduct{
+color: rgb(68, 75, 88);
+font-family: Jost;
+font-size: 24px;
+font-weight: 600;
+line-height: 140%;
+margin-bottom: 20px;
+}
+
+.desc{
+    width: 100%;
+}
