--- a/src/components/home/productForYou/productForYou.module.scss
+++ b/src/components/home/productForYou/productForYou.module.scss
@@ -1,15 +1,18 @@
 .productForYou {
   color: rgb(68, 75, 88);
   list-style: 150%;
-    margin-bottom: 60px;
+  margin-bottom: 60px;
+
   .body {
     border-radius: 4px;
     background: rgb(255, 244, 238);
     padding: 40px 100px;
+
     .title {
       font-size: 30px;
       font-weight: 700;
       margin-bottom: 16px;
+
     }
 
     .subtitle {
@@ -18,17 +21,22 @@
       font-weight: 600;
       margin-bottom: 3px;
     }
+
     .content {
-       padding-top: 25px;
-        padding-bottom: 40px;
-        border-bottom: 1px solid rgb(128, 128, 128);;
-        margin-bottom: 19px;
-        border-top: 1px solid rgb(128, 128, 128);;
+      padding-top: 25px;
+      padding-bottom: 40px;
+      border-bottom: 1px solid rgb(128, 128, 128);
+      ;
+      margin-bottom: 19px;
+      border-top: 1px solid rgb(128, 128, 128);
+      ;
+
       .title {
         font-size: 24px;
         font-weight: 600;
-        margin-bottom:40px;
+        margin-bottom: 40px;
       }
+
       .list {
         max-height: 200px;
         display: flex;
@@ -36,14 +44,17 @@
         flex-direction: column;
         gap: 20px 70px;
         justify-content: space-evenly;
+
         .item {
           display: flex;
           flex-direction: column;
           text-overflow: ellipsis;
           overflow: hidden;
           text-wrap: nowrap;
+
           span {
             display: flex;
+
             .checkbox {
               display: block;
               flex: 1 1 20%;
@@ -51,9 +62,11 @@
               height: 24px;
               margin-right: 10px;
             }
-            .label {  flex: 1 1 80%;
-               display: block;
-                font-size: 16px;
+
+            .label {
+              flex: 1 1 80%;
+              display: block;
+              font-size: 16px;
               font-weight: 600;
               line-height: 23px;
             }
@@ -61,29 +74,44 @@
         }
       }
     }
-    .pagination{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-right: 14px;
-            .step{
-                color: rgb(128, 128, 128);
-                font-size: 16px;
-                font-weight: 600;
-                line-height: 150%;
-                letter-spacing: 0%;
 
-            }
-            .nextStep{
-                padding: 12px 42px;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 150%;
+    .btn {
+      float: right;
+      padding: 12px 42px;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 150%;
+      cursor: pointer;
+      border: 1px solid rgb(68, 75, 88);
+      border-radius: 4px;
+      background: transparent;
+    }
 
-                border: 1px solid rgb(68, 75, 88);
-                border-radius: 4px;
-                background: transparent;
-            }
+    .pagination {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-right: 14px;
+
+      .step {
+        color: rgb(128, 128, 128);
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 150%;
+        letter-spacing: 0%;
+
+      }
+
+    }
+
+    .items {
+      border-radius: 4px;
+      background: rgb(219, 187, 169);
+      padding: 35px 40px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
     }
   }
+
 }
